[edit] delete content
