# openapi.json
@@ -5,7 +5,7 @@
     "version": "0.1.0"
   },
   "paths": {
-    "/content/search": {
+    "/search": {
       "get": {
         "summary": "\u041f\u043e\u0438\u0441\u043a",
         "operationId": "search_content_search__get",
@@ -48,7 +48,7 @@
         }
       }
     },
-    "/content/details": {
+    "/details": {
       "get": {
         "summary": "\u041f\u043e\u043b\u0443\u0447\u0438\u0442\u044c \u043a\u043e\u043d\u043a\u0440\u0435\u0442\u043d\u0443\u044e \u0438\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u044e",
         "operationId": "get_concrete_content_details__get",
@@ -87,7 +87,7 @@
         }
       }
     },
-    "/content/translations": {
+    "/translations": {
       "get": {
         "summary": "\u041f\u043e\u043b\u0443\u0447\u0438\u0442\u044c \u0441\u043f\u0438\u0441\u043e\u043a \u043f\u0435\u0440\u0435\u0432\u043e\u0434\u043e\u0432",
         "operationId": "get_content_translations_content_translations__get",
@@ -126,7 +126,7 @@
         }
       }
     },
-    "/content/movie/videos": {
+    "/movie/videos": {
       "get": {
         "summary": "\u041f\u043e\u043b\u0443\u0447\u0438\u0442\u044c \u0441\u043f\u0438\u0441\u043e\u043a \u0432\u0438\u0434\u0435\u043e \u0444\u0430\u0439\u043b\u043e\u0432",
         "operationId": "get_movie_videos_content_movie_videos__get",
@@ -174,7 +174,7 @@
         }
       }
     },
-    "/content/tv_series/seasons": {
+    "/tv_series/seasons": {
       "get": {
         "summary": "\u041f\u043e\u043b\u0443\u0447\u0438\u0442\u044c \u0441\u043f\u0438\u0441\u043e\u043a \u0441\u0435\u0437\u043e\u043d\u043e\u0432 \u0441\u0435\u0440\u0438\u0430\u043b\u0430 \u0438 \u044d\u043f\u0438\u0437\u043e\u0434\u043e\u0432 \u0432 \u043e\u0437\u0432\u0443\u0447\u043a\u0435",
         "operationId": "get_tv_series_seasons_content_tv_series_seasons__get",
@@ -222,7 +222,7 @@
         }
       }
     },
-    "/content/tv_series/videos": {
+    "/tv_series/videos": {
       "get": {
         "summary": "\u041f\u043e\u043b\u0443\u0447\u0438\u0442 \u0432\u0438\u0434\u0435\u043e \u0444\u0430\u0439\u043b\u044b \u0434\u043b\u044f \u0441\u0435\u0440\u0438\u0430\u043b\u0430",
         "operationId": "get_tv_series_videos_content_tv_series_videos__get",
@@ -285,7 +285,7 @@
         }
       }
     },
-    "/content/page/{page}": {
+    "/page/{page}": {
       "get": {
         "summary": "\u041f\u043e\u043b\u0443\u0447\u0438\u0442 \u043a\u043e\u043d\u0442\u0435\u043d\u0442 \u043d\u0430 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0435",
         "operationId": "get_content_content_page__page__get",
@@ -356,7 +356,7 @@
         }
       }
     },
-    "/content/genres": {
+    "/genres": {
       "get": {
         "summary": "\u041f\u043e\u043b\u0443\u0447\u0438\u0442\u044c \u0432\u0441\u0435 \u0436\u0430\u043d\u0440\u044b",
         "operationId": "get_content_genres__get",
@@ -398,7 +398,7 @@
         }
       }
     },
-    "/content/category/page/{page}": {
+    "/category/page/{page}": {
       "get": {
         "summary": "\u041f\u043e\u043b\u0443\u0447\u0438\u0442 \u043a\u043e\u043d\u0442\u0435\u043d\u0442 \u043f\u043e \u043a\u0430\u0442\u0435\u0433\u043e\u0440\u0438\u0438 \u043d\u0430 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0435",
         "operationId": "get_content_by_categories_content_category_page__page__get",
